0.1.10  xx-Nov-2008
  o Fix a crash bug that occurred when the user clicks 'Clear' in the message
    log toolbar followed by 'Save All'. (Ticket #434)
  o Uncheck the Torbutton options by default in the Windows bundle installer
    if Firefox is not installed. (Ticket #421)
  o Add an Windows bundle installer page that warns the user that they should
    install Firefox, if it looks like they haven't already done so. (Ticket
    #421)


0.1.9   02-Sep-2008
  o Create the control panel's menubar as a parentless QMenuBar, so it is 
    visible even if the control panel is not the topmost window. (Ticket #286)
  o Add a context menu with a "copy" option to RouterDescriptorView? so 
    users can copy some text to the clipboard. (Ticket #291)
  o Make the Tor status label and Vidalia tray icon tooltip display the same
    text after a circuit is established. (Ticket #390)
  o Correct the location of the simplified Chinese help files so they will
    actually load again.
  o Try to load a translation for the current language from Qt's translations
    directory, so we can get Qt's internal widgets (e.g. QDialogButtonBox)
    translated. (Ticket #375)
  o Use "$\r$\n" in the MessageBox strings in the Windows installer 
    translations, so the newlines appear properly. (Ticket #411)
  o Grab the Qt .dlls included in the Vidalia installer directly from the
    configured Qt binary directory (as specified by ${QT_BINARY_DIR}).
  o Add OPENSSL_BINARY_DIR and MINGW_BINARY_DIR cmake options that can be
    used to specify where the Windows installer NSIS scripts should look
    for those dlls, rather than requiring them to all be in a "bin" directory
    under ${Vidalia_BINARY_DIR}.
  o Make the location of the Tor, Privoxy, and Torbutton package files into
    configurable CMake options so the bundle can be built without having to
    shimmy all these files into some specific directory hierarchy. Makes the
    bundle a bit less annoying to build.